bug#49709 03_bug49709.diff Make DBDICT round DD sizes in same way as LGMAN/TSMAN. This avoids discrepancy in information_schema.files. Return warnings if rounded.