storage/ndb/src/ndbapi/NdbDictionaryImpl.cpp
@@ -1369,18 +1369,28 @@ NdbDictionaryImpl::m_emptyMask[MAXNROFATTRIBUTESINWORDS]= {0,0,0,0};
 NdbDictionaryImpl::NdbDictionaryImpl(Ndb &ndb)
   : NdbDictionary::Dictionary(* this), 
     m_facade(this), 
-    m_receiver(m_error),
+    m_receiver(m_error, m_warn),
     m_ndb(ndb)
 {
   m_globalHash = 0;
   m_local_table_data_size= 0;
+#ifdef VM_TRACE
+  // replace by STATIC_ASSERT in 7.x
+  assert(
+    WarnUndobufferRoundUp == CreateFilegroupConf::WarnUndobufferRoundUp &&
+    WarnUndofileRoundDown == CreateFileConf::WarnUndofileRoundDown &&
+    WarnExtentRoundUp == CreateFilegroupConf::WarnExtentRoundUp &&
+    WarnDatafileRoundDown == CreateFileConf::WarnDatafileRoundDown &&
+    WarnDatafileRoundUp == CreateFileConf::WarnDatafileRoundUp
+  );
+#endif
 }
 
 NdbDictionaryImpl::NdbDictionaryImpl(Ndb &ndb,
 				     NdbDictionary::Dictionary & f)
   : NdbDictionary::Dictionary(* this), 
     m_facade(&f), 
-    m_receiver(m_error),
+    m_receiver(m_error, m_warn),
     m_ndb(ndb)
 {
   m_globalHash = 0;
@@ -6395,11 +6405,16 @@ NdbDictInterface::create_file(const NdbFileImpl & file,
 		       -1, 100,
 		       err);
 
-  if (ret == 0 && obj)
+  if (ret == 0)
   {
     Uint32* data = (Uint32*)m_buffer.get_data();
-    obj->m_id = data[0];
-    obj->m_version = data[1];
+    if (obj)
+    {
+      obj->m_id = data[0];
+      obj->m_version = data[1];
+    }
+    m_warn = data[2];
+    DBUG_PRINT("info", ("warning flags: 0x%x", m_warn));
   }
 
   DBUG_RETURN(ret);
@@ -6411,10 +6426,11 @@ NdbDictInterface::execCREATE_FILE_CONF(NdbApiSignal * signal,
 {
   const CreateFileConf* conf=
     CAST_CONSTPTR(CreateFileConf, signal->getDataPtr());
-  m_buffer.grow(4 * 2); // 2 words
+  m_buffer.grow(4 * 3); // 3 words
   Uint32* data = (Uint32*)m_buffer.get_data();
   data[0] = conf->fileId;
   data[1] = conf->fileVersion;
+  data[2] = conf->warningFlags;
   
   m_waiter.signal(NO_WAIT);  
 }
@@ -6550,11 +6566,16 @@ NdbDictInterface::create_filegroup(const NdbFilegroupImpl & group,
 		       DICT_WAITFOR_TIMEOUT, 100,
 		       err);
   
-  if (ret == 0 && obj)
+  if (ret == 0)
   {
     Uint32* data = (Uint32*)m_buffer.get_data();
-    obj->m_id = data[0];
-    obj->m_version = data[1];
+    if (obj)
+    {
+      obj->m_id = data[0];
+      obj->m_version = data[1];
+    }
+    m_warn = data[2];
+    DBUG_PRINT("info", ("warning flags: 0x%x", m_warn));
   }
   
   DBUG_RETURN(ret);
@@ -6566,10 +6587,11 @@ NdbDictInterface::execCREATE_FILEGROUP_CONF(NdbApiSignal * signal,
 {
   const CreateFilegroupConf* conf=
     CAST_CONSTPTR(CreateFilegroupConf, signal->getDataPtr());
-  m_buffer.grow(4 * 2); // 2 words
+  m_buffer.grow(4 * 3); // 3 words
   Uint32* data = (Uint32*)m_buffer.get_data();
   data[0] = conf->filegroupId;
   data[1] = conf->filegroupVersion;
+  data[2] = conf->warningFlags;
   m_waiter.signal(NO_WAIT);  
 }
 
